--- a/FrontEnd/components/PartialFooter.ejs
+++ b/FrontEnd/components/PartialFooter.ejs
@@ -1,3 +1,5 @@
-<footer class="">
-    <p class="col-md-4 mb-0 text-muted">JSYangco</p>
+<footer class="footer navbar navbar-expand-lg navbar-light bg-light fixed-bottom">
+    <div class="text-muted w-100 float-end">
+        <p class="mb-0 float-end px-5"> JSYangco </p>
+    </div>
 </footer>
