--- a/FrontEnd/components/Header.ejs
+++ b/FrontEnd/components/Header.ejs
@@ -1,11 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
+    <div class="container-lg mx-auto">
         <ul class="d-flex justify-content-between w-100 navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link font-bold fs-5 text-white" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/about">About</a>
+                <a class="nav-link font-bold fs-5 text-white" href="/my-cart">
+                    My Cart 
+                    <i class="far fa-shopping-cart inline-flex">
+                        <div id="count" class="text-xs text-white px-1 rounded-circle bg-danger mt-1">
+                        </div>
+                    </i>
+                </a>
             </li>
         </ul>
     </div>
