--- a/FrontEnd/components/PartialFooter.ejs
+++ b/FrontEnd/components/PartialFooter.ejs
@@ -1,4 +1,4 @@
-<footer class="footer navbar navbar-expand-lg navbar-light bg-light fixed-bottom">
+<footer class="footer bg-transparent fixed-bottom">
     <div class="text-muted w-100 float-end">
         <p class="mb-0 float-end px-5"> JSYangco </p>
     </div>
