--- a/FrontEnd/view/Product.ejs
+++ b/FrontEnd/view/Product.ejs
@@ -1,5 +1,5 @@
 <%- include('../components/PartialHead')%>
-<body class="container-lg mx-auto">
+<body class="container-lg mx-auto pb-5">
     <div class="breadcrumb m-0">
         <span class="breadcrumb-item py-3 text-5xl font-bold"> Products </span> 
         <span class="breadcrumb-item py-3 text-5xl font-bold"> <%= item.name %> </span> 
