--- a/FrontEnd/view/Product.ejs
+++ b/FrontEnd/view/Product.ejs
@@ -4,6 +4,64 @@
         <span class="breadcrumb-item py-3 text-5xl font-bold"> Products </span> 
         <span class="breadcrumb-item py-3 text-5xl font-bold"> <%= item.name %> </span> 
     </div>
-    
+    <div class="flex">
+        <div class="w-75 px-2">
+            <div class="card p-3">
+                <div class="card-header bg-white pb-3 px-3">
+                    <div class="inline-flex w-100">
+                        <div class="w-[50%]">
+                            Product
+                        </div>
+                        <div class="w-[15%] text-center">
+                            Price
+                        </div>
+                        <div class="w-[20%] text-center">
+                            Quantity
+                        </div>
+                        <div class="w-[15%] text-center">
+                            Total
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="inline-flex w-100 px-2 py-4">
+                        <div class="w-[50%]">
+                            <div class="flex">
+                                <div class="w-50">
+                                    <img class="w-[50px] h-[50px] mx-auto" src="<%= item.image %>">
+                                </div>
+                                <div class="w-50 text-2xl self-center font-bold">
+                                    <%= item.name %>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-[15%] text-center text-lg self-center">
+                            $<%= item.price %> 
+                        </div>
+                        <div class="w-[20%] text-center self-center text-lg flex justify-center">
+                            <button data-price="<%= item.price %>" id="decrement" class="rounded-l-full text-lg font-bold bg-slate-200 self-center px-4">-</button>
+                            <span id="qty" class="bg-slate-100 px-2"> <%= count %> </span>
+                            <button data-price="<%= item.price %>" id="increment" class="rounded-r-full text-lg font-bold bg-slate-200 self-center px-4">+</button>
+                        </div>
+                        <div class="w-[15%] text-center text-lg self-center">
+                            <span id="ttl">  $<%= count * item.price %>  </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex justify-end">
+                    <button class="btn col-2 text-lg bg-warning rounded-full font-normal text-white hover:!bg-slate-700 hover:!text-white">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="w-25 px-2">
+            <div class="card p-3">
+                <p class="text-lg font-bold"> Delivery Details: </p>
+                <p class="text-lg italic"> *Items will be delivered 2-3 days upon order completion </p>
+            </div>
+        </div>
+    </div>
 </body>
+<script src="/scripts.js"></script>
 <%- include('../components/PartialFooter')%>
