--- a/FrontEnd/view/MyCart.ejs
+++ b/FrontEnd/view/MyCart.ejs
@@ -43,7 +43,7 @@
                                     id="decrementCrt"
                                     data-id="<%=item.id%>" 
                                     data-name="<%=item.name%>"
-                                    data-qty=""
+                                    data-qty="<%= item.quantity %>"
                                     data-img="<%=item.image%>"
                                     data-price="<%=item.price%>"
                                     data-ttl="<%=item.price%>">
@@ -55,7 +55,7 @@
                                     data-index="<%= ndx %>"
                                     data-id="<%=item.id%>" 
                                     data-name="<%=item.name%>"
-                                    data-qty=""
+                                    data-qty="<%= item.quantity %>"
                                     data-img="<%=item.image%>"
                                     data-price="<%=item.price%>"
                                     data-ttl="<%=item.price%>">
