--- a/FrontEnd/view/Product.ejs
+++ b/FrontEnd/view/Product.ejs
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="flex justify-end">
-                    <button class="btn col-2 text-lg bg-warning rounded-full font-normal text-white hover:!bg-slate-700 hover:!text-white">
+                    <button id="buyBtn" class="btn col-2 text-lg bg-warning rounded-full font-normal text-white hover:!bg-slate-700 hover:!text-white">
                         Buy Now
                     </button>
                 </div>
@@ -63,5 +63,8 @@
         </div>
     </div>
 </body>
+<div class="fixed top-0 left-0 w-100 h-100" id="modal-popup" style="display: none; background-color: rgba(0,0,0,0.7);">
+    <%- include('../components/Modal'); %>
+</div>
 <script src="/scripts.js"></script>
 <%- include('../components/PartialFooter')%>
