--- a/FrontEnd/components/Header.ejs
+++ b/FrontEnd/components/Header.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
+<nav class="navbar bg-dark fixed-top">
     <div class="container-lg mx-auto">
-        <ul class="d-flex justify-content-between w-100 navbar-nav">
+        <ul class="flex justify-between w-100">
             <li class="nav-item">
                 <a class="nav-link font-bold fs-5 text-white" href="/">Home</a>
             </li>
